--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,5 +23,5 @@ jobs:
           echo $DOCKERHUB_TOKEN | docker login -u $DOCKERHUB_USERNAME --password-stdin
           docker buildx create --use
           docker buildx inspect
-          docker buildx build --platform linux/amd64,linux/arm64 -t regngod/prac7:latest -t regngod/prac7:${{ github.sha }} --push -f delivery_service/Dockerfile .
+          docker buildx build --platform linux/amd64,linux/arm64 -t renggod/prac7:latest -t renggod/prac7:${{ github.sha }} --push -f delivery_service/Dockerfile .
 
