--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -43,3 +43,16 @@ jobs:
       - name: Push tag YC Registry
         run: |
           docker push cr.yandex/${{ secrets.YC_REGISTRY_ID }}/service_payment_service:latest
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: [build-and-push-yc]
+    steps:
+    - name: Deploy serverless container
+      uses: yc-actions/yc-sls-container-deploy@v1
+      with:
+        yc-sa-json-credentials: ${{ secrets.YC_KEYS }}
+        container-name: ${{ secrets.YC_CONTAINER_NAME }}
+        folder-id: ${{ secrets.YC_FOLDER_ID }}
+        revision-image-url: cr.yandex/${{ secrets.YC_REGISTRY_ID }}/service_payment_service:latest
+        revision-service-account-id: ${{ secrets.YC_SA_ID }}
