--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,8 +6,38 @@ on:
       - master
 
 jobs:
+  test:
+    name: Run tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: install dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y python3-pip
+          pip install psycopg2-binary
+          pip install pytest
+
+      - name: Prepare for tests (compose up)
+        run: docker compose up -d --build
+
+      - name: Wait services to start
+        run: sleep 10
+
+      - name: Run integration test
+        run: python tests/integration.py
+
+
+      - name: Run component test
+        run: python tests/component.py
+
+
+      - name: Clean up (compose down)
+        run: docker compose down
   build-and-push-to-dh:
     runs-on: ubuntu-latest
+    needs: [test]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -27,6 +57,7 @@ jobs:
 
   build-and-push-yc:
     runs-on: ubuntu-latest
+    needs: [test]
     steps:
       - uses: actions/checkout@v3
       - name: Build docker image
