--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,26 @@
 annotated-types==0.6.0
 anyio==4.3.0
+blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 ecdsa==0.18.0
 fastapi==0.110.0
+flask==3.0.2
+flask-sqlalchemy==3.1.1
 h11==0.14.0
 idna==3.6
+iniconfig==2.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.3
 keycloak-client==0.15.4
+MarkupSafe==2.1.5
+packaging==24.0
+pluggy==1.4.0
 pyasn1==0.5.1
 pydantic==2.6.4
 pydantic-core==2.16.3
+pytest==8.1.1
 python-jose==3.3.0
 python-multipart==0.0.9
 requests==2.31.0
@@ -22,4 +32,4 @@ starlette==0.36.3
 typing-extensions==4.10.0
 urllib3==2.2.1
 uvicorn==0.28.0
-sqlalchemy
+werkzeug==3.0.1
