--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,6 +18,7 @@ jobs:
           sudo apt install -y python3-pip
           pip install psycopg2-binary
           pip install pytest
+          pip install sqlalchemy
 
       - name: Prepare for tests (compose up)
         run: docker compose up -d --build
