--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,12 +13,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: install dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y python3-pip
-          pip install psycopg2-binary
-          pip install pytest
-          pip install sqlalchemy
+        run: pip install -r requirements.txt
 
       - name: Prepare for tests (compose up)
         run: docker compose up -d --build
