--- a/prometheus.yml
+++ b/prometheus.yml
@@ -9,3 +9,7 @@ scrape_configs:
   - job_name: 'loki'
     static_configs:
       - targets: ['loki:3100']
+
+  - job_name: 'node'
+    static_configs:
+      - targets: [ 'node:9100' ]
